[package]
name = "pallet-file-bank"
authors = ["CESS LAB"]
version = "0.5.2"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for file-bank management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11"
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { default-features = false, features = ['derive'], version = "2.0.1" }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
log = { version = "0.4.14", default-features = false }
pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false }
rand_chacha = { version = "0.2", default-features = false, optional = true }
cp-scheduler-credit = { path = '../../primitives/scheduler-credit', version = '0.1.0', default-features = false }
cp-cess-common = { path = '../../primitives/common', version = '0.1.0', default-features = false }
pallet-oss = { path = '../oss', version = '0.5.3', default-features = false }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

# local dependencies
[dependencies.pallet-sminer]
default-features = false
path = '../sminer'
version = '0.5.2'

[dependencies.pallet-file-map]
default-features = false
path = '../file-map'
version = '0.5.2'

# dev dependencies
[dev-dependencies]
pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false}
frame-support-test = { git = 'https://github.com/CESSProject/substrate.git', branch = 'monthly-2022-04-cess', version = '3.0.0' }
pallet-scheduler = { git = 'https://github.com/CESSProject/substrate.git', branch = 'monthly-2022-04-cess', version = '4.0.0-dev' }
pallet-timestamp = { git = 'https://github.com/CESSProject/substrate.git', branch = 'monthly-2022-04-cess', version = '4.0.0-dev' }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
sp-npos-elections = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
pallet-session = { version = "4.0.0-dev", default-features = false, features = [
	"historical",
], git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
pallet-bags-list = { version = "4.0.0-dev", features = ["runtime-benchmarks"], git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
pallet-scheduler-credit = { version = "0.1.0", default-features = false, path = '../scheduler-credit'}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"frame-benchmarking/std",
	"pallet-file-map/std",
	"cp-scheduler-credit/std",
	"cp-cess-common/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-cess-staking/runtime-benchmarks",
	"rand_chacha",
]
try-runtime = [ "frame-support/try-runtime" ]
