[package]
name = "pallet-file-bank"
authors = ["CESS LAB"]
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for file-bank management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parking_lot = "0.11"
serde = { workspace = true, optional = true }
codec = { version = "3.2.2", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ['alloc'] }
log = { workspace = true }
rand_chacha = { workspace = true, optional = true }
pallet-rrsc = { workspace = true }
pallet-grandpa = { workspace = true }

pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false }
cp-scheduler-credit = { path = '../../primitives/scheduler-credit', version = '0.1.0', default-features = false }
cp-cess-common = { path = '../../primitives/common', version = '0.1.0', default-features = false }
cp-enclave-verify = { path = '../../primitives/enclave-verify', version = '0.1.0', default-features = false }
pallet-oss = { path = '../oss', version = '0.7.0', default-features = false }

# substrate pallet
pallet-scheduler = { workspace = true }
# sc-network = { workspace = true }

# local dependencies
pallet-sminer = { default-features = false, path = '../sminer' }
pallet-tee-worker = { default-features = false, path = '../tee-worker' }
pallet-storage-handler = { default-features = false, path = '../storage-handler' }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

sp-io = { workspace = true }

sp-std = { workspace = true }

pallet-balances = { workspace = true }

sp-core = { workspace = true }

sp-runtime = { workspace = true }

# dev dependencies
[dev-dependencies]
pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false}
frame-support-test = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-timestamp = { workspace = true }
sp-staking = { workspace = true }
sp-npos-elections = { workspace = true }
frame-election-provider-support = { workspace = true }
pallet-session = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-scheduler-credit = { version = "0.1.0", default-features = false, path = '../scheduler-credit'}
pallet-preimage = { workspace = true }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"frame-benchmarking/std",
	"pallet-tee-worker/std",
	"cp-scheduler-credit/std",
	"cp-cess-common/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-cess-staking/runtime-benchmarks",
	"pallet-rrsc/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"rand_chacha",
]
try-runtime = [ "frame-support/try-runtime" ]
