[package]
name = "pallet-file-map"
authors = ["CESS LAB"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
repository = ""
description = "FRAME pallet for file-map management"
readme = "README.md"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { default-features = false, features = ['derive'], version = "1.0" }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2021-10-cess'
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2021-10-cess'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2021-10-cess'
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2021-10-cess'
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2021-10-cess'
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2021-10-cess'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2021-10-cess'
version = '4.0.0-dev'

# local dependencies
[dependencies.pallet-sminer]
default-features = false
path = '../sminer'
version = '0.1.0'

# local dependencies
[dependencies.pallet-segment-book]
default-features = false
path = '../segment-book'
version = '0.1.0'

# local dependencies
[dependencies.pallet-file-bank]
default-features = false
path = '../file-bank'
version = '0.1.0'

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = ["frame-benchmarking"]