[package]
name = "pallet-file-map"
authors = ["CESS LAB"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
repository = ""
description = "FRAME pallet for file-map management"
readme = "README.md"

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { default-features = false, features = ['derive'], version = "2.0.1" }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
log = { version = "0.4.14", default-features = false }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

# local dependencies
[dependencies.pallet-sminer]
default-features = false
path = '../sminer'
version = '0.1.0'

[dependencies.pallet-cess-staking]
default-features = false
path = '../staking'
version = '4.0.0-dev'

[dev-dependencies]
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
sp-npos-elections = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
pallet-session = { version = "4.0.0-dev", default-features = false, features = [
	"historical",
], git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
pallet-bags-list = { version = "4.0.0-dev", features = ["runtime-benchmarks"], git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-session/std",
	"pallet-cess-staking/std",
]
runtime-benchmarks = ["frame-benchmarking"]