[package]
name = "pallet-segment-book"
authors = ["CESS LAB"]
version = "0.5.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for segment management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { default-features = false, features = ['derive'], version = "2.0.1" }
log = { version = "0.4.14", default-features = false }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dev-dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

# local dependencies
[dependencies.pallet-file-bank]
default-features = false
path = '../file-bank'
version = '0.5.0'

# local dependencies
[dependencies.pallet-sminer]
default-features = false
path = '../sminer'
version = '0.5.0'

[dev-dependencies.frame-support-test]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '3.0.0'

[dev-dependencies.pallet-balances]
#default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dev-dependencies.pallet-scheduler]
#default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

# local dependencies
[dependencies.pallet-file-map]
default-features = false
path = '../file-map'
version = '0.5.0'

[dev-dependencies]
pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false}
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
sp-npos-elections = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
pallet-session = { version = "4.0.0-dev", default-features = false, features = [
	"historical",
], git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
pallet-bags-list = { version = "4.0.0-dev", features = ["runtime-benchmarks"], git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"pallet-sminer/std",
	"pallet-file-bank/std",
	"pallet-file-map/std",
]
runtime-benchmarks = ["frame-benchmarking"]
