[package]
name = "pallet-segment-book"
authors = ["CESS LAB"]
version = "0.5.3"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for segment management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { default-features = false, features = ['derive'], version = "2.0.1" }
log = { version = "0.4.14", default-features = false }
pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false }
cp-cess-common = { path = '../../primitives/common', version = '0.1.0', default-features = false }
pallet-preimage = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/CESSProject/substrate.git', branch = "cess-polkadot-v0.9.36" }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '7.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '5.0.0'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '7.0.0'

[dev-dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '7.0.0'

# local dependencies
[dependencies.pallet-file-bank]
default-features = false
path = '../file-bank'
version = '0.5.3'

# local dependencies
[dependencies.pallet-sminer]
default-features = false
path = '../sminer'
version = '0.5.3'

[dev-dependencies.frame-support-test]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '3.0.0'

[dev-dependencies.pallet-balances]
#default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dev-dependencies.pallet-scheduler]
#default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

# local dependencies
[dependencies.pallet-tee-worker]
default-features = false
path = '../tee-worker'
version = '0.5.3'

[dependencies.pallet-storage-handler]
default-features = false
path = '../storage-handler'
version = '0.5.4'

[dev-dependencies]
pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false}
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-npos-elections = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-session = { version = "4.0.0-dev", default-features = false, features = [
	"historical",
], git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-bags-list = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-scheduler-credit = { version = "0.1.0", default-features = false, path = '../scheduler-credit'}
cp-scheduler-credit = { path = '../../primitives/scheduler-credit', version = '0.1.0', default-features = false }
cp-cess-common = { path = '../../primitives/common', version = '0.1.0', default-features = false }
pallet-oss = { path = '../oss', version = '0.5.3', default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"pallet-sminer/std",
	"pallet-file-bank/std",
	"pallet-tee-worker/std",
	"cp-cess-common/std",
	"cp-cess-common/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-cess-staking/runtime-benchmarks",
]
