[package]
name = "pallet-sminer"
authors = ["CESS LAB"]
version = "0.6.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for sminer management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { default-features = false, features = ['derive'], version = "2.0.1" }
rand_chacha = { version = "0.2", default-features = false, optional = true }
cp-cess-common = { path = '../../primitives/common', version = '0.1.0', default-features = false }
pallet-preimage = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/CESSProject/substrate.git', branch = "cess-polkadot-v0.9.36" }
cp-enclave-verify = { path = '../../primitives/enclave-verify', version = '0.1.0', default-features = false }

#local crate
pallet-tee-worker = { default-features = false, path = '../tee-worker', version = '0.6.0' }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '7.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '5.0.0'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '7.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '7.0.0'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dev-dependencies.pallet-scheduler]
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dev-dependencies.pallet-balances]
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-timestamp/std",
	"pallet-scheduler/std",
	"frame-benchmarking/std",
	"cp-cess-common/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
