[package]
name = "pallet-sminer"
authors = ["CESS LAB"]
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for sminer management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { default-features = false, features = ['derive'], version = "2.0.1" }
rand_chacha = { version = "0.2", default-features = false, optional = true }
pallet-preimage = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/CESSProject/substrate', branch = "cess-polkadot-v0.9.42" }


#local crate
pallet-tee-worker = { default-features = false, path = '../tee-worker' }
pallet-storage-handler = { default-features = false, path = '../storage-handler' }
pallet-cess-treasury = { default-features = false, path = "../cess-treasury" }
pallet-cess-staking = { default-features = false, path = '../staking' }
cp-enclave-verify = { path = '../../primitives/enclave-verify', default-features = false }
cp-bloom-filter = { path = '../../primitives/bloom-filter', default-features = false }
cp-cess-common = { path = '../../primitives/common', default-features = false }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '7.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '5.0.0'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '7.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '7.0.0'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dev-dependencies.pallet-scheduler]
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dev-dependencies.pallet-balances]
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-timestamp/std",
	"pallet-scheduler/std",
	"frame-benchmarking/std",
	"cp-cess-common/std",
	"pallet-cess-treasury/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-cess-staking/runtime-benchmarks",
]
