[package]
name = "pallet-sminer"
authors = ["CESS LAB"]
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for sminer management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }
codec = { version = "3.2.2", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
rand_chacha = { workspace = true, optional = true }
pallet-preimage = { workspace = true }

#local crate
pallet-tee-worker = { default-features = false, path = '../tee-worker' }
pallet-storage-handler = { default-features = false, path = '../storage-handler' }
pallet-cess-treasury = { default-features = false, path = "../cess-treasury" }
pallet-cess-staking = { default-features = false, path = '../staking' }
cp-enclave-verify = { path = '../../primitives/enclave-verify', default-features = false }
cp-bloom-filter = { path = '../../primitives/bloom-filter', default-features = false }
cp-cess-common = { path = '../../primitives/common', default-features = false }

frame-benchmarking = { workspace = true, optional = true }

frame-support = { workspace = true }

frame-system = { workspace = true }

sp-io = { workspace = true }

sp-std = { workspace = true }

pallet-balances = { workspace = true }

pallet-timestamp = { workspace = true }

sp-core = { workspace = true }

sp-runtime = { workspace = true }

pallet-scheduler = { workspace = true }

[dev-dependencies]
pallet-scheduler = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-timestamp/std",
	"pallet-scheduler/std",
	"frame-benchmarking/std",
	"cp-cess-common/std",
	"pallet-cess-treasury/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-cess-staking/runtime-benchmarks",
]
